To initiate action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,5 +27,5 @@ jobs:
           title: Test Issue
           body: Test issue body
           assignees: |
-            alialaa
+            debanjanmitra2010
       - run: echo ${{ steps.issue.outputs.issue }}
