--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: "Open a Github Issue (Testing)"
-author: Ali Alaa
+name: "Open a Github Issue (Debanjan)"
+author: Debanjan Mitra
 description: "Opens a github issue"
 inputs:
   token:
